--- a/about.html
+++ b/about.html
@@ -6,7 +6,9 @@
     <title>About Me - Thiago Carmo</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="icon" type="image/png" href="/my-portfolio-website/assets/penrose-CRMKv-ip.png">
-  <script type="module" crossorigin src="/my-portfolio-website/assets/main-NdXEwMkU.js"></script>
+  <script type="module" crossorigin src="https://cdn.skypack.dev/three@0.174.0"></script>
+  <script type="module" crossorigin src="/my-portfolio-website/assets/main-aTbvPNYu.js"></script>
+  <script type="module" crossorigin src="https://cdn.skypack.dev/three@0.174.0"></script>
   <link rel="stylesheet" crossorigin href="/my-portfolio-website/assets/main-CcJZEmU1.css">
 </head>
 <body>
