--- a/projects.html
+++ b/projects.html
@@ -95,7 +95,9 @@
             }
         }
     </style>
-  <script type="module" crossorigin src="/my-portfolio-website/assets/main-NdXEwMkU.js"></script>
+  <script type="module" crossorigin src="https://cdn.skypack.dev/three@0.174.0"></script>
+  <script type="module" crossorigin src="/my-portfolio-website/assets/main-aTbvPNYu.js"></script>
+  <script type="module" crossorigin src="https://cdn.skypack.dev/three@0.174.0"></script>
   <link rel="stylesheet" crossorigin href="/my-portfolio-website/assets/main-CcJZEmU1.css">
 </head>
 <body>
