Restore videos to original working autoplay format - remove extra attributes that were interfering

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <div class="skills-cards">
                     <div class="skill-card">
                         <a href="skills.html" style="display:block;">
-                        <video autoplay loop muted playsinline webkit-playsinline preload="auto" width="160">
+                        <video autoplay loop muted playsinline width="160">
                             <source src="https://pub-de89dbe7f03d494ba50977abf43dbda9.r2.dev/PythonLogo.mov" type="video/quicktime">
                             <source src="https://pub-de89dbe7f03d494ba50977abf43dbda9.r2.dev/PythonLogo.mp4" type="video/mp4"> 
                         </video>
@@ -169,7 +169,7 @@
                     </div>
                     <div class="skill-card">
                         <a href="skills.html" style="display:block;">
-                        <video autoplay loop muted playsinline webkit-playsinline preload="auto" width="160">
+                        <video autoplay loop muted playsinline width="160">
                             <source src="https://pub-de89dbe7f03d494ba50977abf43dbda9.r2.dev/JSLogo.mov" type="video/quicktime">
                             <source src="https://pub-de89dbe7f03d494ba50977abf43dbda9.r2.dev/JSLogo.mp4" type="video/mp4"> 
                         </video>
@@ -178,7 +178,7 @@
                     </div>
                     <div class="skill-card">
                         <a href="skills.html" style="display:block;">
-                        <video autoplay loop muted playsinline webkit-playsinline preload="auto" width="160">
+                        <video autoplay loop muted playsinline width="160">
                             <source src="https://pub-de89dbe7f03d494ba50977abf43dbda9.r2.dev/PHPLogo.mov" type="video/quicktime">
                             <source src="https://pub-de89dbe7f03d494ba50977abf43dbda9.r2.dev/PHPLogo.mp4" type="video/mp4"> 
                         </video>
@@ -196,7 +196,7 @@
                     </div>
                     <div class="skill-card">
                         <a href="skills.html" style="display:block;">
-                        <video autoplay loop muted playsinline webkit-playsinline preload="auto" width="160">
+                        <video autoplay loop muted playsinline width="160">
                             <source src="https://pub-de89dbe7f03d494ba50977abf43dbda9.r2.dev/CSSLogo.mov" type="video/quicktime">
                             <source src="https://pub-de89dbe7f03d494ba50977abf43dbda9.r2.dev/CSSLogo.mp4" type="video/mp4"> 
                         </video>
@@ -205,9 +205,8 @@
                     </div>
                     <div class="skill-card">
                         <a href="skills.html" style="display:block;">
-                        <video autoplay loop muted playsinline webkit-playsinline preload="auto" width="160">
-                            <source src="https://pub-de89dbe7f03d494ba50977abf43dbda9/r2.dev/Comp 2_1.mov" type="video/quicktime">
-                            <source src="https://pub-de89dbe7f03d494ba50977abf43dbda9/r2.dev/Comp 2_1.mp4" type="video/mp4"> 
+                        <video autoplay loop muted playsinline width="160">
+                            <source src="https://pub-de89dbe7f03d494ba50977abf43dbda9.r2.dev/Comp 2_1.mov" type="video/mp4"> 
                         </video>
                         <p>SQL</p>
                         </a>
