Fix SQL video - restore missing .mov source and correct video type

--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@
                     <div class="skill-card">
                         <a href="skills.html" style="display:block;">
                         <video autoplay loop muted playsinline width="160">
-                            <source src="https://pub-de89dbe7f03d494ba50977abf43dbda9.r2.dev/Comp 2_1.mov" type="video/mp4"> 
+                            <source src="https://pub-de89dbe7f03d494ba50977abf43dbda9.r2.dev/Comp 2_1.mov" type="video/quicktime">
+                            <source src="https://pub-de89dbe7f03d494ba50977abf43dbda9.r2.dev/Comp 2_1.mp4" type="video/mp4"> 
                         </video>
                         <p>SQL</p>
                         </a>
