Update My Portfolio Website project card to link to actual GitHub repository

--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
             <section class="projects">
                 <h2>MY GITHUB PROJECTS</h2>
                 <div class="projects-container">
-                    <a href="https://github.com/your-username/project1" class="project-card" target="_blank">
-                        <img src="codescreen.png" alt="Project 1">
+                    <a href="https://github.com/thicrm/my-portfolio-website" class="project-card" target="_blank">
+                        <img src="codescreen.png" alt="My Portfolio Website">
                         <div class="project-content">
                             <h3>My Portfolio Website</h3>
                             <p>This website. HTML, CSS, JavaScript, React and Next.js.</p>
