Fix skills.html mobile autoplay and projects.html menu overlap - apply same fixes from index.html

--- a/projects.html
+++ b/projects.html
@@ -201,31 +201,33 @@
     </div>
 
     <!-- Projects List -->
-    <div class="projects-list">
-        <div class="project-card-modern">
-            <img src="codescreen.png" alt="Project 1" class="project-image">
-            <div class="project-content-modern">
-                <h3>My Portfolio Website</h3>
-                <p>This portfolio was built with HTML, CSS, and JavaScript, featuring interactive animations and a dynamic blog.</p>
-                <a href="https://github.com/your-username/project1" class="view-project-btn" target="_blank">View Project</a>
+    <div class="container">
+        <div class="projects-list">
+            <div class="project-card-modern">
+                <img src="codescreen.png" alt="Project 1" class="project-image">
+                <div class="project-content-modern">
+                    <h3>My Portfolio Website</h3>
+                    <p>This portfolio was built with HTML, CSS, and JavaScript, featuring interactive animations and a dynamic blog.</p>
+                    <a href="https://github.com/thicrm/my-portfolio-website" class="view-project-btn" target="_blank">View Project</a>
+                </div>
             </div>
-        </div>
 
-        <div class="project-card-modern">
-            <img src="codescreen.png" alt="Project 2" class="project-image">
-            <div class="project-content-modern">
-                <h3>E-Commerce Website</h3>
-                <p>Full shop with authentication, cart, and Stripe payments using React, Tailwind, and Next.js.</p>
-                <a href="https://github.com/your-username/project2" class="view-project-btn" target="_blank">View Project</a>
+            <div class="project-card-modern">
+                <img src="codescreen.png" alt="Project 2" class="project-image">
+                <div class="project-content-modern">
+                    <h3>E-Commerce Website</h3>
+                    <p>Full shop with authentication, cart, and Stripe payments using React, Tailwind, and Next.js.</p>
+                    <a href="https://github.com/your-username/project2" class="view-project-btn" target="_blank">View Project</a>
+                </div>
             </div>
-        </div>
 
-        <div class="project-card-modern">
-            <img src="codescreen.png" alt="Project 3" class="project-image">
-            <div class="project-content-modern">
-                <h3>Record Label Website</h3>
-                <p>Music-first design with Spotify, SoundCloud, and YouTube embeds plus integrated social media.</p>
-                <a href="https://github.com/your-username/project3" class="view-project-btn" target="_blank">View Project</a>
+            <div class="project-card-modern">
+                <img src="codescreen.png" alt="Project 3" class="project-image">
+                <div class="project-content-modern">
+                    <h3>Record Label Website</h3>
+                    <p>Music-first design with Spotify, SoundCloud, and YouTube embeds plus integrated social media.</p>
+                    <a href="https://github.com/your-username/project3" class="view-project-btn" target="_blank">View Project</a>
+                </div>
             </div>
         </div>
     </div>
